Fixed broken layout on ons-row and ons-col.

--- a/framework/css/common.css
+++ b/framework/css/common.css
@@ -35,6 +35,7 @@ ons-navigator {
 * {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0) !important;
 }
 
 ::-webkit-scrollbar {
